Frontend: CSS, Home and Lists changed

--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -112,6 +112,42 @@ body {
     @apply disabled:opacity-50;
 }
 
+.btn-delete1 {
+    @apply p-2;
+    @apply mr-11;
+    @apply rounded-lg;
+    @apply border-2;
+    @apply border-gray-200;
+    @apply focus:border-red-500;
+    @apply focus:outline-none;
+    @apply text-center;
+    @apply text-white;
+    @apply bg-red-400;
+    @apply hover:bg-red-500;
+    @apply transition;
+    @apply mt-2;
+    @apply disabled:opacity-50;
+}
+
+.btn-show1 {
+    @apply p-2;
+    @apply pr-3;
+    @apply pl-3;
+    @apply ml-11;
+    @apply rounded-lg;
+    @apply border-2;
+    @apply border-gray-200;
+    @apply focus:border-blue-500;
+    @apply focus:outline-none;
+    @apply text-center;
+    @apply text-white;
+    @apply bg-blue-400;
+    @apply hover:bg-blue-500;
+    @apply transition;
+    @apply mt-2;
+    @apply disabled:opacity-50;
+}
+
 .status-message {
     @apply mb-2;
     @apply text-gray-600;
@@ -124,3 +160,4 @@ body {
     @apply text-red-500;
     @apply text-sm;
 }
+
