--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -659,6 +659,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-24 {
   gap: 6rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -1001,38 +1007,16 @@ body {
 }
 
 .login-form, .register-form, .profile-form {
-  z-index: 50;
-  position: fixed;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   max-width: 20rem;
   padding: 1rem;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    top: 20%;
-    right: 10%;
-    left: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.cover {
-  z-index: 40;
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-  opacity: 0.75;
-  padding: 1rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .input {
@@ -1154,7 +1138,7 @@ body {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-  margin-top: 0.5rem;
+  margin-top: 1.25rem;
 }
 
 .btn-deleteAccount:disabled {
